--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solana/actions": "^1.0.2",
     "@solana/web3.js": "^1.93.4",
     "class-variance-authority": "^0.7.0",
+    "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
