--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
